fixes footer and sponsor links

--- a/gallery.html
+++ b/gallery.html
@@ -157,87 +157,88 @@
     </div>
     <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
       <div class="row mx-6">
-        <div class="col-md-4 text-center">
-          <a href="#" class="title-sponsor">
-            <img src="../images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
+        <div class="col-lg-4 text-center">
+          <a href="http://www.scheels.com/" class="title-sponsor">
+            <img src="./images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
           </a>
         </div>
-        <div class="col-md-4 text-center">
-          <a href="#" class="title-sponsor">
-            <img src="../images/sponsors/ford.png" class="img-fluid" alt="Ford">
+        <div class="col-lg-4 text-center">
+          <a href="http://www.eauclaireford.com/" class="title-sponsor">
+            <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
           </a>
         </div>
-        <div class="col-md-4 text-center">
-          <a href="#" class="title-sponsor">
-            <img src="../images/sponsors/Subway.png" class="img-fluid" alt="Subway">
+        <div class="col-lg-4 text-center">
+          <a href="http://www.subway.com/subwayroot/default.aspx" class="title-sponsor">
+            <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
           </a>
         </div>
       </div>
       <div class="row mx-6">
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
+        <div class="col-lg-3 col-sm-6 my-auto">
+          <a href="http://www.weau.com/" class="sponsor">
+            <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
           </a>
         </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
+        <div class="col-lg-3 col-sm-6 my-auto">
+          <a href="http://www.geteskimo.com/" class="sponsor">
+            <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
           </a>
         </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
+        <div class="col-lg-3 col-sm-6 my-auto">
+          <a href="http://www.megacoop.com/" class="sponsor">
+            <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
           </a>
         </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
+        <div class="col-lg-3 col-sm-6 my-auto">
+          <a href="http://www.prestigervauto.com/" class="sponsor">
+            <img src="./images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
           </a>
         </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/dining.png" class="img-fluid" alt="Dining">
+      </div>
+      <div class="row mx-6">
+        <div class="col-lg col-6 text-center my-auto">
+          <a href="http://www.uwec.edu/dining/">
+            <img src="./images/sponsors/dining.png" class="img-fluid sponsor" alt="Dining">
           </a>
         </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/edge.png" class="img-fluid" alt="The Edge">
+        <div class="col-lg col-6 text-center my-auto">
+          <a href="http://www.theedgepubandeatery.com/">
+            <img src="./images/sponsors/edge.png" class="img-fluid sponsor" alt="The Edge">
           </a>
         </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/view.png" class="img-fluid" alt="The View">
+        <div class="col-lg col-6 text-center my-auto">
+          <a href="http://www.theviewonlakewissota.com/">
+            <img src="./images/sponsors/view.png" class="img-fluid sponsor" alt="The View">
           </a>
         </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/ttmtech.png" class="img-fluid" alt="TTMTech">
+        <div class="col-lg col-6 text-center my-auto">
+          <a href="https://ttmtech.com/" class="sponsor">
+            <img src="./images/sponsors/ttmtech.png" class="img-fluid" alt="TTMTech">
           </a>
         </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/xtreme.png" class="img-fluid" alt="Xtreme">
+        <div class="col-lg col-6 text-center my-auto">
+          <a href="http://www.xtrememotorsportsllc.com/">
+            <img src="./images/sponsors/xtreme.png" class="img-fluid sponsor" alt="Xtreme">
           </a>
         </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/dynamic.png" class="img-fluid" alt="Dynamic">
+        <div class="col-lg col-6 text-center my-auto">
+          <a href="http://www.leinie.com/">
+            <img src="./images/sponsors/lein.png" class="img-fluid sponsor" alt="Leinenkugels">
           </a>
         </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
+        <div class="col-lg col-6 text-center my-auto">
+          <a href="https://www.aceautomall.com/">
+            <img src="./images/sponsors/AceAutoMall.png" class="img-fluid sponsor" alt="Ace Auto Mall">
           </a>
         </div>
-        <div class="col-md-2 col-sm-4 col-6 text-center my-auto">
-          <a href="#" class="sponsor">
-            <img src="../images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
+        <div class="col-lg col-6 text-center my-auto">
+          <a href="http://www.lakewissotasandbar.com/">
+            <img src="./images/sponsors/thesandbar.png" class="img-fluid sponsor" alt="The SandBar">
           </a>
         </div>
       </div>
       <p class="text-center">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
     </div>
-  </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
