--- a/index.html
+++ b/index.html
@@ -254,81 +254,81 @@
   <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
     <div class="row mx-6">
       <div class="col-lg-4 text-center">
-        <a href="www.scheels.com" class="title-sponsor">
+        <a href="http://www.scheels.com/" class="title-sponsor">
           <img src="./images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
         </a>
       </div>
       <div class="col-lg-4 text-center">
-        <a href="www.eauclaireford.com" class="title-sponsor">
+        <a href="http://www.eauclaireford.com/" class="title-sponsor">
           <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
         </a>
       </div>
       <div class="col-lg-4 text-center">
-        <a href="www.subway.com/en-us" class="title-sponsor">
+        <a href="http://www.subway.com/subwayroot/default.aspx" class="title-sponsor">
           <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
         </a>
       </div>
     </div>
     <div class="row mx-6">
       <div class="col-lg-3 col-sm-6 my-auto">
-        <a href="www.weau.com" class="sponsor">
+        <a href="http://www.weau.com/" class="sponsor">
           <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
         </a>
       </div>
       <div class="col-lg-3 col-sm-6 my-auto">
-        <a href="www.geteskimo.com" class="sponsor">
+        <a href="http://www.geteskimo.com/" class="sponsor">
           <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
         </a>
       </div>
       <div class="col-lg-3 col-sm-6 my-auto">
-        <a href="www.megacoop.com" class="sponsor">
+        <a href="http://www.megacoop.com/" class="sponsor">
           <img src="./images/sponsors/megaholiday.png" class="img-fluid" alt="Mega Holiday">
         </a>
       </div>
       <div class="col-lg-3 col-sm-6 my-auto">
-        <a href="www.prestigervauto.com" class="sponsor">
+        <a href="http://www.prestigervauto.com/" class="sponsor">
           <img src="./images/sponsors/prestige.png" class="img-fluid" alt="Prestige">
         </a>
       </div>
     </div>
     <div class="row mx-6">
       <div class="col-lg col-6 text-center my-auto">
-        <a href="www.uwec.edu/campus-life/housing-dining/dining/food-services/">
+        <a href="http://www.uwec.edu/dining/">
           <img src="./images/sponsors/dining.png" class="img-fluid sponsor" alt="Dining">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
-        <a href="www.theedgepubandeatery.com">
+        <a href="http://www.theedgepubandeatery.com/">
           <img src="./images/sponsors/edge.png" class="img-fluid sponsor" alt="The Edge">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
-        <a href="www.theviewonlakewissota.com">
+        <a href="http://www.theviewonlakewissota.com/">
           <img src="./images/sponsors/view.png" class="img-fluid sponsor" alt="The View">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
-        <a href="ttmtech.com" class="sponsor">
+        <a href="https://ttmtech.com/" class="sponsor">
           <img src="./images/sponsors/ttmtech.png" class="img-fluid" alt="TTMTech">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
-        <a href="xtrememotorsportsllc.com">
+        <a href="http://www.xtrememotorsportsllc.com/">
           <img src="./images/sponsors/xtreme.png" class="img-fluid sponsor" alt="Xtreme">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
-        <a href="www.leinie.com">
+        <a href="http://www.leinie.com/">
           <img src="./images/sponsors/lein.png" class="img-fluid sponsor" alt="Leinenkugels">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
-        <a href="www.aceautomall.com">
+        <a href="https://www.aceautomall.com/">
           <img src="./images/sponsors/AceAutoMall.png" class="img-fluid sponsor" alt="Ace Auto Mall">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
-        <a href="www.lakewissotasandbar.com">
+        <a href="http://www.lakewissotasandbar.com/">
           <img src="./images/sponsors/thesandbar.png" class="img-fluid sponsor" alt="The SandBar">
         </a>
       </div>
