Added Grizzly to sponsors and fixed sponsor scaling

--- a/sponsors.html
+++ b/sponsors.html
@@ -105,17 +105,17 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 text-center">
+          <div class="col-md-4 text-center my-auto">
             <a href="http://www.scheels.com/" class="title-sponsors">
               <img src="./images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
             </a>
           </div>
-          <div class="col-md-4 text-center">
+          <div class="col-md-4 text-center my-auto">
             <a href="http://www.eauclaireford.com/" class="title-sponsors">
               <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
             </a>
           </div>
-          <div class="col-md-4 text-center">
+          <div class="col-md-4 text-center my-auto">
             <a href="http://www.subway.com/subwayroot/default.aspx" class="title-sponsors">
               <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
             </a>
@@ -189,6 +189,11 @@
               <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
             </a>
           </div>
+          <div class="col-4 col-md text-center my-auto">
+            <a href="https://www.grizzlycoolers.com/" class="sponsors">
+              <img src="./images/sponsors/grizzly.png" class="img-fluid" alt="Grizzly Coolers">
+            </a>
+          </div>
         </div>
         <div class="row">
           <div class="col-12">
@@ -196,14 +201,12 @@
           </div>
         </div>
     </div>
-
     <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
       <p class="text-center">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
       </br>
       </br>
     </br>
     </div>
-
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
