--- a/pastResults.html
+++ b/pastResults.html
@@ -1045,17 +1045,17 @@
   </div>
   <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
     <div class="row mx-6">
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-4 text-center my-auto">
         <a href="http://www.scheels.com/" class="title-sponsor">
           <img src="./images/sponsors/scheels.png" class="img-fluid" alt="Scheels">
         </a>
       </div>
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-4 text-center my-auto">
         <a href="http://www.eauclaireford.com/" class="title-sponsor">
           <img src="./images/sponsors/ford.png" class="img-fluid" alt="Ford">
         </a>
       </div>
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-4 text-center my-auto">
         <a href="http://www.subway.com/subwayroot/default.aspx" class="title-sponsor">
           <img src="./images/sponsors/Subway.png" class="img-fluid" alt="Subway">
         </a>
@@ -1085,43 +1085,48 @@
     </div>
     <div class="row mx-6">
       <div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.uwec.edu/dining/">
-          <img src="./images/sponsors/dining.png" class="img-fluid sponsor" alt="Dining">
+        <a href="http://www.uwec.edu/dining/" class="sponsor">
+          <img src="./images/sponsors/dining.png" class="img-fluid" alt="Dining">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.theedgepubandeatery.com/">
-          <img src="./images/sponsors/edge.png" class="img-fluid sponsor" alt="The Edge">
+        <a href="http://www.theedgepubandeatery.com/" class="sponsor">
+          <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.theviewonlakewissota.com/">
-          <img src="./images/sponsors/view.png" class="img-fluid sponsor" alt="The View">
+        <a href="http://www.theviewonlakewissota.com/" class="sponsor">
+          <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
-        <a href="https://ttmtech.com/" class="sponsor">
+        <a href="https://ttmtech.com/" class="sponsor" class="sponsor">
           <img src="./images/sponsors/ttmtech.png" class="img-fluid" alt="TTMTech">
         </a>
       </div>
-      <div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.xtrememotorsportsllc.com/">
-          <img src="./images/sponsors/xtreme.png" class="img-fluid sponsor" alt="Xtreme">
+      <div class="col-lg col-6 text-center my-auto" class="sponsor">
+        <a href="http://www.xtrememotorsportsllc.com/" class="sponsor">
+          <img src="./images/sponsors/xtreme.png" class="img-fluid" alt="Xtreme">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.leinie.com/">
-          <img src="./images/sponsors/lein.png" class="img-fluid sponsor" alt="Leinenkugels">
+        <a href="http://www.leinie.com/" class="sponsor">
+          <img src="./images/sponsors/lein.png" class="img-fluid" alt="Leinenkugels">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
-        <a href="https://www.aceautomall.com/">
-          <img src="./images/sponsors/AceAutoMall.png" class="img-fluid sponsor" alt="Ace Auto Mall">
+        <a href="https://www.aceautomall.com/" class="sponsor">
+          <img src="./images/sponsors/AceAutoMall.png" class="img-fluid" alt="Ace Auto Mall">
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
-        <a href="http://www.lakewissotasandbar.com/">
-          <img src="./images/sponsors/thesandbar.png" class="img-fluid sponsor" alt="The SandBar">
+        <a href="http://www.lakewissotasandbar.com/" class="sponsor">
+          <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
+        </a>
+      </div>
+      <div class="col-lg col-6 text-center my-auto">
+        <a href="https://www.grizzlycoolers.com/" class="sponsor">
+          <img src="./images/sponsors/grizzly.png" class="img-fluid" alt="Grizzly Coolers">
         </a>
       </div>
     </div>
