Added link to online ticket sale site

--- a/tickets.html
+++ b/tickets.html
@@ -101,7 +101,7 @@
   <div class="container px-4">
     <div class="row">
 			<div class="col mx-2">
-				<h2 class="brand-blue">Buy Tickets Here!</h2>
+				<h2 class="brand-blue"><a href="https://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-50704748267?aff=ebdssbdestsearch">Buy Tickets Here!</a></h2>
 			</div>
     </div>
 
