Updated jigsup video to 2019

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         </div>
         <div class="row px-3 mb-5 d-none d-sm-block">
           <div>
-            <iframe width="435" height="245" src="https://www.youtube.com/embed/8yo0ZtBL6F4" allowfullscreen></iframe>
+            <iframe width="435" height="245" src="https://www.youtube.com/embed/EZO1i0aGs94" allowfullscreen></iframe>
           </div>
         </div>
       </div>
