Update WIFA on jigsup.org and change drop down name to all caps.

--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="#">Rules</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item brand-blue" href="#">Wifa Tournament</a>
+              <a class="dropdown-item brand-blue" href="#">WIFA Tournament</a>
             </div>
           </li>
           <li class="nav-item">
