--- a/sponsors.html
+++ b/sponsors.html
@@ -194,6 +194,11 @@
               <img src="./images/sponsors/grizzly.png" class="img-fluid" alt="Grizzly Coolers">
             </a>
           </div>
+          <div class="col-4 col-md text-center my-auto">
+            <a href="" class="sponsors">
+              <img src="./images/sponsors/airforce.png" class="img-fluid" alt="United States Air Force">
+            </a>
+          </div>
         </div>
         <div class="row">
           <div class="col-12">
