--- a/directions.html
+++ b/directions.html
@@ -158,7 +158,7 @@
     </div>
   </div>
 
-  <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
+  <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto pt-2">
     <div class="row mx-6">
       <div class="col-lg-4 text-center my-auto">
         <a href="http://www.scheels.com/" class="title-sponsor">
@@ -244,8 +244,13 @@
           <img src="./images/sponsors/grizzly.png" class="img-fluid" alt="Grizzly Coolers">
         </a>
       </div>
+      <div class="col-lg col-6 text-center my-auto">
+        <a href="" class="sponsor">
+          <img src="./images/sponsors/airforce.png" class="img-fluid" alt="United States Air Force">
+        </a>
+      </div>
     </div>
-    <p class="text-center">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
+    <p class="text-center my-1">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
   </div>
   <script type="text/javascript">
   function initMap() {
