--- a/prizes.html
+++ b/prizes.html
@@ -124,7 +124,336 @@
               </div>
               <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion1">
                 <div class="card-body">
-                  Available in January
+                  <table class="table table-striped table-bordered">
+                    <thead class="thead-light">
+                      <tr>
+                        <th>Place</th>
+                        <th>Prize</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr class="table-warning">
+                        <td>1</td>
+                        <td>1st Place Trophy & Scheels Cooler</td>
+                      </tr>
+                      <tr>
+                        <td>2</td>
+                        <td>Eskimo P1 Propane Rocket Auger</td>
+                      </tr>
+                      <tr>
+                        <td>3</td>
+                        <td>Eskimo QuickFlip Two-Man Shelter</td>
+                      </tr>
+                      <tr>
+                        <td>4</td>
+                        <td>Barronett Grounder 250 Bloodtrail Hunting Blind</td>
+                      </tr>
+                      <tr>
+                        <td>5</td>
+                        <td>Eskimo Quickfish 3</td>
+                      </tr>
+                      <tr>
+                        <td>6</td>
+                        <td>$50 Scheels Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>7</td>
+                        <td>River's Edge Classic XT 1-Man Ladder Stand</td>
+                      </tr>
+                      <tr>
+                        <td>8</td>
+                        <td>$50 Mega/Holiday Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>9</td>
+                        <td>Grizzly Cooler</td>
+                      </tr>
+                      <tr>
+                        <td>10</td>
+                        <td>Aqua-Vu micro 5.0 Revolution Underwater Camera System</td>
+                      </tr>
+                      <tr>
+                        <td>11</td>
+                        <td>$50 Scheels Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>12</td>
+                        <td>Eskimo Lockout Jacket - 2XL</td>
+                      </tr>
+                      <tr>
+                        <td>13</td>
+                        <td>Browning Command OPS Game Camera</td>
+                      </tr>
+                      <tr>
+                        <td>14</td>
+                        <td>$50 Mega/Holiday Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>15</td>
+                        <td>10-in ION X Ice Auger</td>
+                      </tr>
+                      <tr>
+                        <td>16</td>
+                        <td>Eskimo 6-Inch Hand Auger</td>
+                      </tr>
+                      <tr>
+                        <td>17</td>
+                        <td>$50 Scheels Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>18</td>
+                        <td>Eskimo QuickFlip One-Man Shelter</td>
+                      </tr>
+                      <tr>
+                        <td>19</td>
+                        <td>Eskimo HC40 Quantum Ice Auger</td>
+                      </tr>
+                      <tr>
+                        <td>20</td>
+                        <td>$50 Mega/Holiday Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>21</td>
+                        <td>Jaw Jacker & Ice Fishing Combo</td>
+                      </tr>
+                      <tr>
+                        <td>22</td>
+                        <td>13 Fishing Descent Ice Reel & Fiskas Jig Package</td>
+                      </tr>
+                      <tr>
+                        <td>23</td>
+                        <td>Tip Down & Fishwell Float Livewell</td>
+                      </tr>
+                      <tr>
+                        <td>24</td>
+                        <td>Eskimo 8-Inch Hand Auger</td>
+                      </tr>
+                      <tr class="table-warning">
+                        <td>25</td>
+                        <td>$500 Cash</td>
+                      </tr>
+                      <tr>
+                        <td>30</td>
+                        <td>$50 Scheels Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>35</td>
+                        <td>Pflueger Trion Spinning Reel</td>
+                      </tr>
+                      <tr>
+                        <td>40</td>
+                        <td>Grizzly Cooler</td>
+                      </tr>
+                      <tr>
+                        <td>45</td>
+                        <td>$50 Mega/Holiday Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>50</td>
+                        <td>Cooler - Livebait w/ Aerator</td>
+                      </tr>
+                      <tr>
+                        <td>55</td>
+                        <td>Eskimo 8-Inch Hand Auger</td>
+                      </tr>
+                      <tr>
+                        <td>60</td>
+                        <td>Scheels Deluxe Combo Case</td>
+                      </tr>
+                      <tr>
+                        <td>65</td>
+                        <td>$50 Scheels Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>70</td>
+                        <td>8-in ION Ice Auger w/ Reverse</td>
+                      </tr>
+                      <tr>
+                        <td>75</td>
+                        <td>Eskimo 7-Inch Hand Auger</td>
+                      </tr>
+                      <tr>
+                        <td>80</td>
+                        <td>$50 Mega/Holiday Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>85</td>
+                        <td>13 Fishing Radioactive Pickle Ice Combo</td>
+                      </tr>
+                      <tr>
+                        <td>90</td>
+                        <td>Dave Genz True Blue Series Combo & Fiskas Jig Package</td>
+                      </tr>
+                      <tr>
+                        <td>95</td>
+                        <td>$50 Scheels Gift Card</td>
+                      </tr>
+                      <tr class="table-warning">
+                        <td>100</td>
+                        <td>$1,000 Cash</td>
+                      </tr>
+                      <tr>
+                        <td>105</td>
+                        <td>Scheels Deluxe Combo Case</td>
+                      </tr>
+                      <tr>
+                        <td>110</td>
+                        <td>$50 Mega/Holiday Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>115</td>
+                        <td>River's Edge Classic 1-Man Ladder Stand</td>
+                      </tr>
+                      <tr>
+                        <td>120</td>
+                        <td>Barronett Radar Snow Hunting Blind</td>
+                      </tr>
+                      <tr>
+                        <td>125</td>
+                        <td>Leopold Binoculars - 10x50</td>
+                      </tr>
+                      <tr>
+                        <td>130</td>
+                        <td>$50 Scheels Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>135</td>
+                        <td>Eskimo Quickfish 6</td>
+                      </tr>
+                      <tr>
+                        <td>140</td>
+                        <td>River's Edge Deluxe XT 1-Man Ladder Stand</td>
+                      </tr>
+                      <tr>
+                        <td>145</td>
+                        <td>$50 Mega/Holiday Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>150</td>
+                        <td>GPS ETREX 10</td>
+                      </tr>
+                      <tr>
+                        <td>155</td>
+                        <td>Dave Genz True Blue Series Combo & Fiskas Jig Package</td>
+                      </tr>
+                      <tr>
+                        <td>160</td>
+                        <td>Eskimo 7-Inch Hand Auger</td>
+                      </tr>
+                      <tr>
+                        <td>165</td>
+                        <td>$100 Scheels Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>170</td>
+                        <td>Beaver Dam Tip Up</td>
+                      </tr>
+                      <tr>
+                        <td>175</td>
+                        <td>Eskimo F1 Rocket Ice Auger</td>
+                      </tr>
+                      <tr>
+                        <td>180</td>
+                        <td>Eskimo EVO Crossover 1</td>
+                      </tr>
+                      <tr>
+                        <td>185</td>
+                        <td>$50 Mega/Holiday Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>190</td>
+                        <td>Tip Down & Bracket Beaver Dam Grip Holder</td>
+                      </tr>
+                      <tr>
+                        <td>195</td>
+                        <td>Eskimo Lockout Bibs - 2XL</td>
+                      </tr>
+                      <tr class="table-warning">
+                        <td>200</td>
+                        <td>$500 Cash</td>
+                      </tr>
+                      <tr>
+                        <td>205</td>
+                        <td>$50 Scheels Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>210</td>
+                        <td>Eskimo QuickFlip One-Man-Shelter</td>
+                      </tr>
+                      <tr>
+                        <td>215</td>
+                        <td>Jaw Jacker & Ice Fishing Combo</td>
+                      </tr>
+                      <tr>
+                        <td>220</td>
+                        <td>River's Edge Big Foot XC Hang-On Stand</td>
+                      </tr>
+                      <tr>
+                        <td>225</td>
+                        <td>Pflueger Trion Spinning Reel</td>
+                      </tr>
+                      <tr>
+                        <td>230</td>
+                        <td>$50 Mega/Holiday Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>235</td>
+                        <td>Eskimo 949i</td>
+                      </tr>
+                      <tr>
+                        <td>240</td>
+                        <td>Ice Armor Gloves - 2XL</td>
+                      </tr>
+                      <tr>
+                        <td>245</td>
+                        <td>Rapala Electric Fillet Knife</td>
+                      </tr>
+                      <tr>
+                        <td>250</td>
+                        <td>Eskimo 6-Inch Hand Auger</td>
+                      </tr>
+                      <tr>
+                        <td>255</td>
+                        <td>$50 Mega/Holiday Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>260</td>
+                        <td>Browning Command OPS Game Camera</td>
+                      </tr>
+                      <tr>
+                        <td>265</td>
+                        <td>River's Edge Big Foot XL Classic Hang-On Stand</td>
+                      </tr>
+                      <tr>
+                        <td>270</td>
+                        <td>Beaver Dam Tip Up</td>
+                      </tr>
+                      <tr>
+                        <td>275</td>
+                        <td>$100 Mega/Holiday Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>280</td>
+                        <td>Eskimo 43cc 8-in Mako Ice Auger</td>
+                      </tr>
+                      <tr>
+                        <td>285</td>
+                        <td>$50 Scheels Gift Card</td>
+                      </tr>
+                      <tr>
+                        <td>290</td>
+                        <td>Marcum M1 Ice Sonar Flasher System</td>
+                      </tr>
+                      <tr>
+                        <td>295</td>
+                        <td>Eskimo Quickfish 3</td>
+                      </tr>
+                      <tr class="table-warning">
+                        <td>300</td>
+                        <td>$500 Cash</td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </div>
@@ -155,11 +484,14 @@
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion2">
                 <div class="card-body">
                   <div class="table-responsive">
-    								<table class="table">
+    								<table class="table table-striped table-bordered">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Place</th>
+                          <th>Prize</th>
+                        </tr>
+                      </thead>
     									<tbody>
-    										<th>Place</th>
-    										<th>Prize</th>
-    										</tr>
     										<tr>
     											<td>1</td>
     											<td>Scheels Cooler</td>
@@ -497,11 +829,14 @@
               <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion2">
                 <div class="card-body">
                   <div class="table-responsive">
-    								<table class="table">
-    									<tbody>
-    										<th>Place</th>
-    										<th>Prize</th>
-    										</tr>
+    								<table class="table table-striped table-bordered">
+                      <thead  class="thead-light">
+                        <tr>
+                          <th>Place</th>
+      										<th>Prize</th>
+                        </tr>
+                      </thead>
+                      <tbody>
     										<tr>
     											<td>1</td>
     											<td>Xtreme Motorsports- 2017 Polaris Sportsman 450 4-Wheeler</td>
@@ -669,7 +1004,7 @@
       </div>
     </div>
   </div>
-  <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
+  <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto pt-2">
     <div class="row mx-6">
       <div class="col-lg-4 text-center my-auto">
         <a href="http://www.scheels.com/" class="title-sponsor">
@@ -755,8 +1090,13 @@
           <img src="./images/sponsors/grizzly.png" class="img-fluid" alt="Grizzly Coolers">
         </a>
       </div>
+      <div class="col-lg col-6 text-center my-auto">
+        <a href="" class="sponsor">
+          <img src="./images/sponsors/airforce.png" class="img-fluid" alt="United States Air Force">
+        </a>
+      </div>
     </div>
-    <p class="text-center">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
+    <p class="text-center my-1">Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a></p>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
