--- a/test.html
+++ b/test.html
@@ -99,39 +99,24 @@
         <div class="col-12">
           <h2 class="brand-blue">Live Results</h2>
         </div>
-        <div class="col-6 mb-6">
-          <table id="table" class="table table-striped table-bordered table-hover">
-            <thead>
+      </div>
+      <div class="row">
+        <div class="col">
+          <table id="table" class="table table-striped table-bordered">
+            <thead class="thead-light">
               <tr>
                 <th scope="col">First Name</th>
                 <th scope="col">Last Name</th>
                 <th scope="col">Fish</th>
                 <th scope="col">Weight</th>
-                <th scope="col">Time</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody id="tablebody">
             </tbody>
           </table>
-          <h3>You can find the final prize winners on the <a href="pastResults.html">past results</a> page!</h3>
-        </div>
-        <div class="col-6 mb-6">
-          <h3>Like us on <a href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">Facebook</a> for updates</h3>
         </div>
       </div>
     </div>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
   </div>
   <div class="footer container border border-bottom-0 pb-2 bg-light d-block mx-auto">
     <div class="row mx-6">
