Added link  to Air Force logo
Added link  to Air Force logo

--- a/liveResults.html
+++ b/liveResults.html
@@ -212,7 +212,7 @@
         </a>
       </div>
       <div class="col-lg col-6 text-center my-auto">
-        <a href="" class="sponsor">
+        <a href="https://na01.safelinks.protection.outlook.com/?url=www.airforce.com&data=02%7C01%7CSCHILLJB1332%40uwec.edu%7C3f06ddb287954c86d6b608d677dca0a6%7Cdd068b97759349388b3214faef2af1d8%7C0%7C0%7C636828186794658578&sdata=00LFdfhG6de%2Br0%2BY31m5e%2BeM9VP%2BTMdSHNlhd%2Bp5G1o%3D&reserved=0" class="sponsor">
           <img src="./images/sponsors/airforce.png" class="img-fluid" alt="United States Air Force">
         </a>
       </div>
