Videos, dates, and scripts
Videos, dates, and scripts

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </div>
         <div class="row px-3 d-none d-sm-block">
           <div>
-            <iframe width="435" height="245" src="https://www.youtube.com/embed/CegFjNXfmlM" allowfullscreen></iframe>
+            <iframe width="435" height="245" src="https://www.youtube.com/embed/lObQaIdp1PU" allowfullscreen></iframe>
           </div>
         </div>
         <div class="row px-3 mb-5 d-none d-sm-block">
