live results added ticket number col
live results added ticket number col

--- a/test.html
+++ b/test.html
@@ -105,6 +105,7 @@
           <table id="table" class="table table-striped table-bordered">
             <thead class="thead-light">
               <tr>
+                <th scope="col">Ticket Number</th>
                 <th scope="col">First Name</th>
                 <th scope="col">Last Name</th>
                 <th scope="col">Fish</th>
