--- a/prizes.html
+++ b/prizes.html
@@ -146,7 +146,7 @@
                       </tr>
                       <tr>
                         <td>4</td>
-                        <td>Barronett Grounder 250 Bloodtrail Hunting Blind</td>
+                        <td>Barronett Radar Hub Hunting Blind</td>
                       </tr>
                       <tr>
                         <td>5</td>
@@ -306,7 +306,7 @@
                       </tr>
                       <tr>
                         <td>120</td>
-                        <td>Barronett Radar Snow Hunting Blind</td>
+                        <td>Barronett Radar Hub Huntng Blind</td>
                       </tr>
                       <tr>
                         <td>125</td>
@@ -434,7 +434,7 @@
                       </tr>
                       <tr>
                         <td>280</td>
-                        <td>Eskimo 43cc 8-in Mako Ice Auger</td>
+                        <td>$500 Ace Auto Mall Gift Card</td>
                       </tr>
                       <tr>
                         <td>285</td>
