Added 2019 Raffle Prizes
added raffle prizes

--- a/prizes.html
+++ b/prizes.html
@@ -467,7 +467,77 @@
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion1">
                 <div class="card-body">
-                  Available in January
+                  <div class="table-responsive">
+                    <table class="table table-striped table-bordered">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Prize</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>2018 Polaris Sportsman 450 ATV</td>
+                        </tr>
+                        <tr>
+                          <td>$500 Scheel's Gift Card</td>
+                        </tr>
+                        <tr>
+                          <td>$500 Scheel's Gift Card</td>
+                        </tr>
+                        <tr>
+                          <td>$500 Scheel's Gift Card</td>
+                        </tr>
+                        <tr>
+                          <td>$500 Scheel's Gift Card</td>
+                        </tr>
+                        <tr>
+                          <td>Leinenkugel's Adirondack Chair</td>
+                        </tr>
+                        <tr>
+                          <td>Jaw Jacker Hook Setter + $25 Gift Certificate to The View</td>
+                        </tr>
+                        <tr>
+                          <td>Green Bay Packers Autographed Football in Display Case</td>
+                        </tr>
+                        <tr>
+                          <td>Dangler Rod Holder + $25 Gift Certificate to The Edge</td>
+                        </tr>
+                        <tr>
+                          <td>Grizzly Drifter 12 Soft-Sided Cooler + RTIC Mug</td>
+                        </tr>
+                        <tr>
+                          <td>$50 Holiday Mega! CO-OP Gift Card + Blugold Apparel</td>
+                        </tr>
+                        <tr>
+                          <td>Jaw Jacker Hook Setter  + $25 Gift Certificate to The View</td>
+                        </tr>
+                        <tr>
+                          <td>Bloody Mary Basket from Visit Eau Claire + $25 Gift Certificate to The Edge</td>
+                        </tr>
+                        <tr>
+                          <td>Eskimo Winter Hat + 2 Grizzly Grip Cans + $25 Gift Certificate to The View</td>
+                        </tr>
+                        <tr>
+                          <td>Grizzly Drifter 12 Soft-Sided Cooler + RTIC Mug</td>
+                        </tr>
+                        <tr>
+                          <td>1 Night Stay for 2 in Standard Room at Lake of the Torches Resort Casino</td>
+                        </tr>
+                        <tr>
+                          <td>Grizzly 20 Hard-Sided Cooler</td>
+                        </tr>
+                        <tr>
+                          <td>Leinenkugel's Paddle + $25 Gift Certificate to The View</td>
+                        </tr>
+                        <tr>
+                          <td>Dangler Rod Holder + $25 Gift Certificate to The Edge</td>
+                        </tr>
+                        <tr>
+                          <td>$50 Holiday Mega! CO-OP Gift Card + Blugold Apparel</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
               </div>
             </div>
