--- a/prizes.html
+++ b/prizes.html
@@ -346,7 +346,7 @@
                       </tr>
                       <tr>
                         <td>170</td>
-                        <td>Beaver Dam Tip Up</td>
+                        <td>Beaver Dam Tip Up + $10 Scheels Gift Card</td>
                       </tr>
                       <tr>
                         <td>175</td>
@@ -402,7 +402,7 @@
                       </tr>
                       <tr>
                         <td>240</td>
-                        <td>Ice Armor Gloves - 2XL</td>
+                        <td>$50 Scheels Gift Card (delete the gloves)</td>
                       </tr>
                       <tr>
                         <td>245</td>
@@ -426,7 +426,7 @@
                       </tr>
                       <tr>
                         <td>270</td>
-                        <td>Beaver Dam Tip Up</td>
+                        <td>Beaver Dam Tip Up + $10 Scheels Gift Card</td>
                       </tr>
                       <tr>
                         <td>275</td>
