--- a/prizes.html
+++ b/prizes.html
@@ -402,7 +402,7 @@
                       </tr>
                       <tr>
                         <td>240</td>
-                        <td>$50 Scheels Gift Card (delete the gloves)</td>
+                        <td>$50 Scheels Gift Card</td>
                       </tr>
                       <tr>
                         <td>245</td>
