Updated Raffle Prizes
Updated Raffle Prizes

--- a/prizes.html
+++ b/prizes.html
@@ -535,6 +535,12 @@
                         <tr>
                           <td>$50 Holiday Mega! CO-OP Gift Card + Blugold Apparel</td>
                         </tr>
+                        <tr>
+                          <td>North Star Mohican Casino Resort 1-Night Getaway Package for 2</td>
+                        </tr>
+                        <tr>
+                          <td>Excel Steel Fab Fire Ring</td>
+                        </tr>
                       </tbody>
                     </table>
                   </div>
