More Prize Updates
More Prize Updates

--- a/pastResults.html
+++ b/pastResults.html
@@ -431,7 +431,7 @@
                 							<td>Ross Hanson</td>
                               <td>0.774</td>
                 							<td>Crappie</td>
-                              <td>Barronett Radar Hub Huntng Blind</td>
+                              <td>Barronett Radar Hub Hunting Blind</td>
                 						</tr>
                 						<tr>
                 							<th>125</th>
@@ -723,7 +723,7 @@
                       </div>
                       <div class="row">
                         <div class="col-sm-12">
-                          <h2 class="brand-blue">2018 The One That Got Away Winner</h2>
+                          <h2 class="brand-blue">2019 The One That Got Away Winner</h2>
                 					<div class="table-responsive">
                 						<table class="table">
                 							<thead>
@@ -744,7 +744,7 @@
                       </div>
                       <div class="row">
                 				<div class="col-sm-12">
-                					<h2 class="brand-blue">2018 Raffle Prize Winners</h2>
+                					<h2 class="brand-blue">2019 Raffle Prize Winners</h2>
                 					<div class="table-responsive">
                 						<table class="table">
                 							<thead>
@@ -804,11 +804,11 @@
                                 </tr>
                                 <tr>
                                   <td>Bloody Mary Basket from Visit Eau Claire + $25 Gift Certificate to the Edge</td>
-                                  <td></td>
+                                  <td>Dan Gillis</td>
                                 </tr>
                                 <tr>
                                   <td>Eskimo Winter Hat + Two Grizzly Grip Cans + $25 Gift Certificate to The View</td>
-                                  <td></td>
+                                  <td>Kris Phillipson</td>
                                 </tr>
                                 <tr>
                                   <td>Grizzly Drifter 12 Soft-sided Cooler + RTIC Mug</td>
@@ -845,6 +845,12 @@
                 							</tbody>
                 						</table>
                 					</div>
+                				</div>
+                			</div>
+                      <div class="row">
+                				<div class="col-sm-12">
+                					<h2 class="brand-blue">2019 Ford F150 Winner</h2>
+                					<h3>Andy Kellan</h3>
                 				</div>
                 			</div>
                     </div>
@@ -1383,7 +1389,7 @@
             									<td>Josh Hayes</td>
             									<td>0.593</td>
             									<td>Walleye</td>
-            									<td>River&#39;s Edge Ladder Stand</td>
+            									<td>River's Edge Ladder Stand</td>
             								</tr>
             								<tr>
             									<td>270</td>
