--- a/pastResults.html
+++ b/pastResults.html
@@ -106,13 +106,19 @@
               <div class="card-header" id="headingFour">
                 <h5 class="mb-0">
                   <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                    2019
+                    2019 Truck, Fish, and Raffle Winners
                   </button>
                 </h5>
               </div>
               <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                 <div class="card-body">
-                  <div class="row">
+                  <div class="row mb-4">
+                    <div class="col-sm-12">
+                      <h2 class="brand-blue">2019 Ford F150 Winner</h2>
+                      <h3 >Andy Kellan</h3>
+                    </div>
+                  </div>
+                  <div class="row mb-2">
                     <div class="col-sm-12">
                       <h2 class="brand-blue">2019 Fish Prize Winners</h2>
                       <div class="table-responsive">
@@ -688,7 +694,7 @@
                           </tbody>
                         </table>
                       </div>
-                      <div class="row">
+                      <div class="row mb-2">
                         <div class="col-sm-12">
                           <h2 class="brand-blue">2019 Species Prize Winners</h2>
                           <div class="table-responsive">
@@ -721,28 +727,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="row">
-                        <div class="col-sm-12">
-                          <h2 class="brand-blue">2019 The One That Got Away Winner</h2>
-                					<div class="table-responsive">
-                						<table class="table">
-                							<thead>
-                								<tr>
-                									<th>Contestant</th>
-                									<th>Prize</th>
-                								</tr>
-                							</thead>
-                							<tbody>
-                								<tr>
-                									<td></td>
-                									<td></td>
-                								</tr>
-                							</tbody>
-                						</table>
-                					</div>
-                        </div>
-                      </div>
-                      <div class="row">
+                      <div class="row mb-2">
                 				<div class="col-sm-12">
                 					<h2 class="brand-blue">2019 Raffle Prize Winners</h2>
                 					<div class="table-responsive">
@@ -847,12 +832,6 @@
                 					</div>
                 				</div>
                 			</div>
-                      <div class="row">
-                				<div class="col-sm-12">
-                					<h2 class="brand-blue">2019 Ford F150 Winner</h2>
-                					<h3>Andy Kellan</h3>
-                				</div>
-                			</div>
                     </div>
                   </div>
                 </div>
@@ -867,7 +846,7 @@
               </div>
               <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                 <div class="card-body">
-                  <div class="row">
+                  <div class="row mb-2">
             				<div class="col-sm-12">
             					<h2 class="brand-blue">2018 Fish Prize Winners</h2>
             					<div class="table-responsive">
@@ -1443,7 +1422,7 @@
             							</tbody>
             						</table>
             					</div>
-                      <div class="row">
+                      <div class="row mb-2">
                 				<div class="col-sm-12">
                 					<h2 class="brand-blue">2018 Species Prize Winners</h2>
                 					<div class="table-responsive">
@@ -1478,7 +1457,7 @@
                 				</div>
                 			</div>
 
-                			<div class="row">
+                			<div class="row mb-2">
                 				<div class="col-sm-12">
                           <h2 class="brand-blue">2018 The One That Got Away Winner</h2>
                 					<div class="table-responsive">
@@ -1501,7 +1480,7 @@
                 				</div>
                 			</div>
 
-                			<div class="row">
+                			<div class="row mb-2">
                 				<div class="col-sm-12">
                 					<h2 class="brand-blue">2018 Raffle Prize Winners</h2>
                 					<div class="table-responsive">
@@ -1689,7 +1668,7 @@
             </div>
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
               <div class="card-body">
-                <div class="row">
+                <div class="row mb-2">
 									<div class="col-sm-12">
 										<h2 class="brand-blue">2017 Fish Prize Winners</h2>
 										<div class="table-responsive">
@@ -1711,7 +1690,7 @@
 									</div>
 								</div>
 
-								<div class="row">
+								<div class="row mb-2">
 									<div class="col-sm-12">
 										<h2 class="brand-blue">2017 Raffle Prize Winners</h2>
 										<div class="table-responsive">
@@ -1730,7 +1709,7 @@
 									</div>
 								</div>
 
-								<div class="row">
+								<div class="row mb-2">
 									<div class="col-sm-12">
 										<h2 class="brand-blue">2017 Species Prize Winners</h2>
 										<div class="table-responsive">
