--- a/pastResults.html
+++ b/pastResults.html
@@ -98,7 +98,7 @@
       </nav>
     </div>
     <div class="content container px-4">
-      <div class="row">
+      <div class="row mb-5">
         <div class="col">
           <h2 class="brand-blue">Past Results</h2>
           <div id="accordion">
