Added Kent to the Commitee

--- a/contact.html
+++ b/contact.html
@@ -165,6 +165,10 @@
                 <td>Wissota Lions Club</td>
               </tr>
               <tr>
+                <td scope="row">Kent Gerberich</td>
+                <td>UWEC Learning and Technology Services</td>
+              </tr>
+              <tr>
                 <td scope="row">Andy Jepsen</td>
                 <td>UWEC Recreation and Sport Operations</td>
               </tr>
