--- a/pastResults.html
+++ b/pastResults.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/brand.css">
 
-  <title>Jig's Up | Past Results</title>
+  <title>Jig's Up | Results</title>
 
   <link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png">
@@ -58,7 +58,7 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item brand-blue" href="pastResults.html">Past Results</a>
+                <a class="dropdown-item brand-blue" href="pastResults.html">Results</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item disabled" href="#">Gallery</a>
                 <div class="dropdown-divider"></div>
@@ -100,7 +100,7 @@
     <div class="content container px-4">
       <div class="row mb-5">
         <div class="col">
-          <h2 class="brand-blue">Past Results</h2>
+          <h2 class="brand-blue">Results</h2>
           <div id="accordion">
             <div class="card">
               <div class="card-header" id="headingFour">
