Changed Past Results to Results
Changed Past Results to Results on all the pages

--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,7 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="#">Lodging</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item brand-blue" href="#">Past Results</a>
+              <a class="dropdown-item brand-blue" href="#">Results</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="#">Gallery</a>
               <div class="dropdown-divider"></div>
