--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item brand-blue" href="pastResults.html">Past Results</a>
+              <a class="dropdown-item brand-blue" href="pastResults.html">Results</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item disabled" href="#">Gallery</a>
               <div class="dropdown-divider"></div>
