--- a/wifa.html
+++ b/wifa.html
@@ -74,7 +74,7 @@
 							<li role="presentation" class="divider"></li>
 							<li><a href="lodging.html">Lodging</a></li>
 							<li role="presentation" class="divider"></li>
-							<li><a href="pastResults.html">Past Results</a></li>
+							<li><a href="pastResults.html">Results</a></li>
 							<li role="presentation" class="divider"></li>
 							<li><a href="assets/2018_Rules_of_the_Tournament.pdf" target="_blank">Rules</a></li>
 							<li role="presentation" class="divider"></li>
